added vue router

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vueify": "^9.4.1"
   },
   "dependencies": {
-    "vue": "^2.5.13"
+    "vue": "^2.5.13",
+    "vue-router": "^3.0.1"
   }
 }
