--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "http-server build",
     "build": "npm run build-html && npm run build-js",
     "build-html": "mkdir -p build && cp html/index.html build",
-    "build-js": "browserify -t vueify -e index.js -o build/bundle.js",
+    "build-js": "browserify -t envify -t vueify -e index.js -o build/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -21,10 +21,12 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "browserify": "^14.5.0",
+    "envify": "^4.1.0",
     "vueify": "^9.4.1"
   },
   "dependencies": {
     "vue": "^2.5.13",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   }
 }
