--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "http-server build",
     "build": "npm run build-html && npm run build-js",
-    "build-html": "mkdir -p build && cp html/index.html build",
+    "build-html": "mkdir -p build && cp html/* build",
     "build-js": "browserify -t envify -t vueify -e index.js -o build/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
