--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "http-server build",
-		"build": "npm run build-html && npm run build-js",
+		"build": "npm run lint && npm run build-html && npm run build-js",
 		"build-html": "mkdir -p build && cp html/* build",
 		"build-js": "browserify -t envify -t vueify -e index.js -o build/bundle.js",
+		"lint": "eslint '*.js' 'app/*/**.js' 'store/*/**.js'",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [
@@ -22,6 +23,7 @@
 	"devDependencies": {
 		"browserify": "^14.5.0",
 		"envify": "^4.1.0",
+		"eslint": "^4.19.1",
 		"vueify": "^9.4.1"
 	},
 	"dependencies": {
