updated eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,24 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+				"no-else-return": [
+					"error",
+					{"allowElseIf": true}
+				],
+				"no-new": "error",
+				"no-param-reassign": "error",
+				"array-callback-return": "error",
+				"no-shadow": "error",
+				"no-use-before-define": "error",
+				"global-require": "error",
+				"no-process-env": "error",
+				"no-lonely-if": "error",
+				"max-params": ["error", 4],
+				"max-len": [
+					"error",
+					{"code": 120, "tabWidth": 2}
+				],
+				"no-plusplus": "error"
     }
 }
