--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
 	"name": "song-manager-frontend",
 	"version": "0.1.0",
 	"description": "Manage set lists",
+	"repository": "https://github.com/Oisota/song-manager-frontend",
 	"main": "index.js",
 	"scripts": {
-		"start": "http-server build",
-		"build": "npm run lint && npm run build-html && npm run build-js",
-		"build-html": "mkdir -p build && cp src/html/* build",
-		"build-js": "npm run build-lib-js && npm run build-app-js",
-		"build-app-js": "browserify -t envify -t vueify -e src/main.js -x 'vue' -x 'vuex' -x 'vue-router' -x 'axios' -o build/app.js",
-		"build-lib-js": "browserify -r 'vue' -r 'vuex' -r 'vue-router' -r 'axios' -o build/lib.js",
-		"lint": "eslint 'scripts/*.js' 'src/*/**.js'",
+		"start": "npm run lint && webpack-dev-server --open",
+		"build": "npm run lint && webpack --config=webpack.prod.js",
+		"watch": "webpack --watch",
+		"lint": "eslint 'src/*/**.js'",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [
@@ -23,14 +21,20 @@
 	"author": "Derek Morey",
 	"license": "GPL-3.0",
 	"devDependencies": {
-		"browserify": "^14.5.0",
-		"envify": "^4.1.0",
+		"clean-webpack-plugin": "^0.1.19",
+		"css-loader": "^1.0.0",
 		"eslint": "^4.19.1",
-		"vueify": "^9.4.1"
+		"html-webpack-plugin": "^3.2.0",
+		"vue-loader": "^15.4.2",
+		"vue-template-compiler": "^2.5.17",
+		"webpack": "^4.21.0",
+		"webpack-cli": "^3.1.2",
+		"webpack-dev-server": "^3.1.9",
+		"webpack-merge": "^4.1.4"
 	},
 	"dependencies": {
 		"axios": "^0.17.1",
-		"vue": "^2.5.13",
+		"vue": "^2.5.17",
 		"vue-router": "^3.0.1",
 		"vuex": "^3.0.1"
 	}
