--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,10 @@
 		"node": true
 	},
 	"extends": "eslint:recommended",
+	"parserOptions": {
+		"ecmaVersion": 6,
+		"sourceType": "module"
+	},
 	"rules": {
 		"no-console": 0,
 		"indent": [
