--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 		"eslint": "^5.8.0",
 		"eslint-loader": "^2.1.1",
 		"html-webpack-plugin": "^3.2.0",
+		"node-sass": "^4.12.0",
+		"sass-loader": "^7.2.0",
 		"vue-loader": "^15.4.2",
 		"vue-template-compiler": "^2.5.17",
 		"webpack": "^4.21.0",
@@ -36,6 +38,9 @@
 	},
 	"dependencies": {
 		"axios": "^0.17.1",
+		"bootstrap": "^4.3.1",
+		"jquery": "^3.4.1",
+		"popper.js": "^1.15.0",
 		"vue": "^2.5.17",
 		"vue-router": "^3.0.1",
 		"vuex": "^3.0.1"
