--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"jquery": "^3.4.1",
 		"popper.js": "^1.16.0",
 		"vue": "^2.6.10",
+		"vue-notification": "^1.3.20",
 		"vue-router": "^3.1.3",
 		"vuex": "^3.1.2"
 	}
