--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"bootstrap": "^4.3.1",
 		"jquery": "^3.4.1",
 		"ky": "^0.16.2",
+		"lodash": "^4.17.15",
 		"popper.js": "^1.16.0",
 		"vue": "^2.6.10",
 		"vue-notification": "^1.3.20",
