--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"css-loader": "^1.0.1",
 		"eslint": "^5.16.0",
 		"eslint-loader": "^2.2.1",
+		"file-loader": "^5.1.0",
 		"html-webpack-plugin": "^3.2.0",
 		"node-sass": "^4.13.1",
 		"sass-loader": "^7.3.1",
