--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"author": "Derek Morey",
 	"license": "GPL-3.0",
 	"devDependencies": {
+		"@types/lodash": "^4.14.151",
 		"babel-loader": "^8.0.6",
 		"clean-webpack-plugin": "^0.1.19",
 		"css-loader": "^1.0.1",
@@ -26,18 +27,22 @@
 		"eslint-loader": "^2.2.1",
 		"file-loader": "^5.1.0",
 		"html-webpack-plugin": "^3.2.0",
-		"node-sass": "^4.13.1",
+		"install": "^0.13.0",
+		"node-sass": "^4.14.1",
+		"npm": "^6.14.5",
 		"sass-loader": "^7.3.1",
+		"ts-loader": "^7.0.4",
+		"typescript": "^3.9.2",
 		"vue-loader": "^15.7.2",
 		"vue-template-compiler": "^2.6.10",
-		"webpack": "^4.41.2",
+		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.10",
-		"webpack-dev-server": "^3.9.0",
+		"webpack-dev-server": "^3.11.0",
 		"webpack-merge": "^4.2.2"
 	},
 	"dependencies": {
 		"bootstrap": "^4.3.1",
-		"jquery": "^3.4.1",
+		"jquery": "^3.5.1",
 		"ky": "^0.16.2",
 		"lodash": "^4.17.15",
 		"popper.js": "^1.16.0",
