--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"author": "Derek Morey",
 	"license": "GPL-3.0",
 	"devDependencies": {
+		"@types/jquery": "^3.3.38",
 		"@types/lodash": "^4.14.151",
 		"babel-loader": "^8.0.6",
 		"clean-webpack-plugin": "^0.1.19",
